--- a/src/main/webapp/site.css
+++ b/src/main/webapp/site.css
@@ -37,9 +37,19 @@
 	margin-top: 200px;
 }
 .formClass {
-	margin-left:40%;
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+.inputClass {
+	width: 95%;
+	margin-left: auto;
+	margin-right: auto;
 }
 .landingHeadline {
-	margin-left: 22%;
+	margin-right: 25%;
+	margin-left: 25%;
 	margin-top: 25px;
+	text-align:center;
 }
